@@ -1,3 +1,8 @@
+Sat May 15 17:16:15 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ext/iconv/iconv.c (rb_iconv_sys_fail): raise BrokenLibrary if
+	  errno is not set.  [ruby-dev:41317]
+
 Thu May 13 18:20:16 2010  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* io.c (swallow): should use more_char() instead of fill_cbuf().
